--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,9 @@ h1 {
 	font-size: 2rem;
 }
 
-body>div {
+/*div {
 	border: 1px solid red;
-}
+}*/
 
 .banner {
 	color: #fff;
@@ -44,6 +44,7 @@ body>div {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	min-width: 100%;
 
 }
 
@@ -54,6 +55,38 @@ body>div {
 .input-bar {
 	display: flex;
 	flex-direction: row;
-	min-width: 55%;
-	justify-content: stretch;
+	
+}
+
+.summary {
+	display: flex;
+	flex-direction: row;
+}
+.summary div {
+	max-width: 33vw;
+	min-height: 60vh;
+}
+
+.showcase {
+	display: flex;
+	flex-flow: row wrap;
+}
+.showcase-block {
+	width: 50%;
+	min-height: 75vh;
+}
+.showcase-img {
+	width: 50%;
+	background-image: url(https://images.unsplash.com/photo-1519687079572-8a59631f3685?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.testimonials {
+	display: flex;
+}
+.clients {
+	max-width: 33%;
+	min-height: 40vh;
 }
